Fri Mar 23 21:26:31 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Cookies.h:
        * ciao/Servant_Impl_Base.h:
        * ciao/Servant_Impl_Utils_T.cpp:
        * ciao/Cookies.cpp:
        * CIDLC/OperationHeaderEmitters.cpp:
        * CIDLC/OperationHeaderEmitters.hpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        
          - changed key type of ACE_Array_Map added in
          
            Tue Mar  6 20:21:45 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>
            
            to ptrdiff_t from CORBA::ULong, so it will be
            portable to 64-bit systems.
            
          - fixed formatting errors in generated code
            for facet servant operations, and removed 
            unused methods from the emitter class.

Fri Mar 23 12:46:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Session_Container.cpp:
        * ciao/StandardConfigurator_Impl.cpp:
        * ciao/Swapping_Container.cpp:
        * examples/Null_Component/Null_Component_exec.h:
        * tools/Config_Handlers/ERE_Handler.h:
          Layout changes

Fri Mar 23 06:56:38 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp

          Removed emulated exception macros.

Fri Mar 23 06:45:51 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/RepositoryManager/ZIP_Wrapper.h

          Addressed initialization warning.

Fri Mar 23 03:13:40 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * DAnCE/NodeApplication/Config_Manager.h:
        * DAnCE/NodeApplication/Config_Manager.cpp:
        * DAnCE/NodeApplication/Config_Manager_export.h:

          Removed uncessary include files. Also, implementation of virtual
          destructor should not be in header or inline file, it was moved
          to a newly created cpp file and an export header was created.