@@ -1,3 +1,11 @@
+Sun Mar 25 23:07:17 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * CIDLC/OperationHeaderEmitters.cpp
+        * CIDLC/OperationHeaderEmitters.hpp
+        
+          Reverted part of previous commit which caused malformed output
+          in components with supported interfaces with raises clauses.
+
 Fri Mar 23 21:26:31 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * ciao/Cookies.h:
